addressed review comments, added tests